--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ nav {
   background-color: rgb(32, 31, 28);
   width: 40%;
   height: 50%;
-  border: solid rgb(165, 161, 161) 0.2rem;
+  border: solid rgb(165, 161, 161) 0.1rem;
   border-radius: 1.5rem;
   /* box-shadow: 0 0 10px, inset 0 0 10px; */
   font-family: deutsch_gothicnormal;
@@ -156,6 +156,11 @@ section {
   align-items: center;
 }
 
+#about {
+  /* display: none; */
+
+}
+
 #about * {
   margin-top: 5vh;
 }
@@ -187,6 +192,28 @@ section {
   font-size: 20px;
 }
 
+#history {
+  display: none;
+}
+
+#history *{
+  margin-top: 5vh;
+}
+
+#history .h_text {
+  border-radius: 1rem;
+  padding: 2vh;
+}
+
+#history img {
+  width: 80vw;
+  border-radius: 5rem;
+}
+
+#history .bat {
+  width: 20vw;
+}
+
 /*
 *
 ******** aside ********
@@ -201,7 +228,7 @@ aside {
   background-color: rgb(32, 31, 28);
   width: 80%;
   height: 80%;
-  border: solid rgb(165, 161, 161) 0.2rem;
+  border: solid rgb(165, 161, 161) 0.1rem;
   border-radius: 1.5rem;
   /* box-shadow: 0 0 10px, inset 0 0 10px; */
   overflow-y: scroll;
@@ -312,13 +339,17 @@ footer {
   }
 
   #about .text {
-    background-color: rgb(32, 31, 28);
+    background-color: rgb(32, 31, 28, 0.7);
     width: 70vw;
     box-shadow: 0 0 20px black;
   }
 
+  #about img {
+    border: solid 1vh rgb(32, 31, 28, 0.7);
+  }
+
   #dicton {
-    background-color: rgb(32, 31, 28);
+    background-color: rgb(32, 31, 28, 0.7);
     width: 50vw;
     box-shadow: 0 0 20px black;
   }
@@ -428,7 +459,7 @@ footer {
     position: sticky;
     top: 5vh;
     left: 0;
-    height: 50vh;
+    height: 40vh;
     width: 15vw;
     border-style: none;
     box-shadow: none;
@@ -467,13 +498,11 @@ footer {
 
   #about .text {
     width: 30vw;
-    background-color: rgb(32, 31, 28);
   }
 
   #dicton {
     font-size: 50px;
     width: 20vw;
-    background-color: rgb(32, 31, 28);
   }
 
   #anonyme {
@@ -493,7 +522,7 @@ footer {
     position: sticky;
     top: 5vh;
     right: 0;
-    height: 50vh;
+    height: 40vh;
     width: 15vw;
     border-style: none;
     padding: 2.5vh;
