--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 * {
   padding: 0;
   margin: 0;
+  text-decoration: none;
 }
 
 ::selection {
@@ -9,6 +10,22 @@
 
 ::-moz-selection {
   background: rgb(97, 91, 72);
+}
+
+a:link {
+  color: #ffffff;
+}
+
+a:visited {
+  color: #9ea383;
+}
+
+a:hover {
+  color: #c4b483;
+}
+
+a:focus {
+  color: #504912;
 }
 
 @font-face {
@@ -91,7 +108,7 @@ h1 {
   height: 10vh;
   width: 20vw;
   background-color: black;
-  background-image: url(assets/icone_bat.png);
+  background-image: url(assets/icons/icone_bat.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 8vh;
@@ -102,7 +119,7 @@ h1 {
   height: 10vh;
   width: 20vw;
   background-color: black;
-  background-image: url(assets/icone_play.png);
+  background-image: url(assets/icons/icone_play.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 6vh;
@@ -128,6 +145,7 @@ nav {
   font-family: deutsch_gothicnormal;
   font-size: 2rem;
   box-shadow: 0 0 20px black;
+  z-index: 1;
 }
 
 ul {
@@ -154,11 +172,6 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-#about {
-  /* display: none; */
-
 }
 
 #about * {
@@ -192,9 +205,6 @@ section {
   font-size: 20px;
 }
 
-#history {
-  display: none;
-}
 
 #history *{
   margin-top: 5vh;
@@ -224,15 +234,24 @@ aside {
   display: none;
   position: fixed;
   top: 12vh;
-  right: 5vh;
+  right: 3vh;
   background-color: rgb(32, 31, 28);
-  width: 80%;
-  height: 80%;
+  width: 70vw;
+  height: 70vh;
+  padding: 5vh;
   border: solid rgb(165, 161, 161) 0.1rem;
   border-radius: 1.5rem;
-  /* box-shadow: 0 0 10px, inset 0 0 10px; */
   overflow-y: scroll;
   box-shadow: 0 0 20px black;
+  z-index: 1;
+}
+
+aside p {
+  margin-top: 2vh;
+}
+
+.logoPlayer {
+  max-width: 40vw;
 }
 
 audio {
@@ -524,8 +543,8 @@ footer {
     right: 0;
     height: 40vh;
     width: 15vw;
-    border-style: none;
     padding: 2.5vh;
+    border-style: none;
     background-color: rgb(32, 31, 28);
     border-radius: 0.5rem;
   }
