--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ nav {
   left: 5vh;
   background-color: rgb(32, 31, 28);
   width: 40%;
-  height: 0vh;
+  height: 50vh;
   border: solid rgb(165, 161, 161) 0.1rem;
   border-radius: 1.5rem;
   /* box-shadow: 0 0 10px, inset 0 0 10px; */
@@ -138,10 +138,6 @@ nav {
   box-shadow: 0 0 20px black;
   z-index: 1;
   transition: 0.5s;
-}
-
-nav:active {
-  height: 50vh;
 }
 
 ul {
@@ -233,6 +229,57 @@ section * {
   display: none;
 }
 
+#testTitle {
+  font-family: deutsch_gothicnormal;
+}
+
+#redemption form {
+  display: flex;
+  flex-direction: column;
+}
+
+#redemption form * {
+  margin-top: 0;
+}
+
+#redemption label {
+  margin: 5vh 0;
+  background-color: rgb(32, 31, 28);
+  border-radius: 0.5rem;
+  padding: 1vh 5vw;
+  font-weight: bold;
+}
+
+#redemption .line {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#redemption p {
+  padding: 0 2vw;
+}
+
+#redemption .raw {
+  margin-bottom: 10vh;
+}
+
+#submQuizz {
+  width: 30vw;
+  height: 7vh;
+  margin: 0 30vw;
+  font-family: deutsch_gothicnormal;
+  font-size: 5vh;
+  background-color: rgb(32, 31, 28);
+  color: white;
+  border: none;
+  border-radius: 1rem;
+}
+
+#submQuizz:hover {
+  color: #c4b483;
+}
+
 /*
 *
 ******** aside ********
@@ -258,7 +305,7 @@ aside {
 aside div {
   margin-top: 2vh;
   padding: 2vh;
-  height: 15vh;
+  height: 25vh;
   background-repeat: no-repeat;
   background-position: center 25%;
   background-size: 20vh;
@@ -452,6 +499,12 @@ footer {
     box-shadow: 0 0 20px black;
   }
 
+  #bands .bandName {
+    background-color: rgb(32, 31, 28, 0.8);
+    border-radius: 0.5rem;
+    padding: 1vh;
+  }
+
   #bands .btext {
     background-color: rgb(32, 31, 28, 0.7);
     box-shadow: 0 0 20px black;
@@ -465,6 +518,41 @@ footer {
     box-shadow: 0 0 20px black;
   }
 
+  #testTitle {
+    background-color: rgb(32, 31, 28);
+    box-shadow: 0 0 20px black;
+    border-radius: 1rem;
+    padding: 2vh;
+  }
+
+  #redemption #introTest {
+    background-color: rgb(32, 31, 28, 0.7);
+    box-shadow: 0 0 20px black;
+    border-radius: 1rem;
+    padding: 2vh;
+  }
+
+    #redemption form {
+    background-color: rgb(32, 31, 28, 0.8);
+    box-shadow: 0 0 20px black;
+    border-radius: 1rem;
+    padding: 2vh;
+  }
+
+  #redemption .raw {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5vh;
+    padding: 0 5vw;
+  }
+
+  #submQuizz {
+    width: 10vw;
+    height: 7vh;
+    margin: 5vh 22vw;
+  }
+
   /*
 *
 ******** aside ********
@@ -472,13 +560,18 @@ footer {
 */
 
   aside {
-    left: 17vw;
+    left: 33vw;
+    width: 40vw;
   }
 
   aside div {
     padding: 2vh;
-    height: 25vh;
+    height: 35vh;
     background-size: 30vh;
+  }
+
+  aside p {
+    text-align: center;
   }
 
   /*
@@ -904,6 +997,11 @@ footer {
 
   aside div {
     background-size: 20vh;
+    height: 25vh;
+  }
+
+  aside p {
+    text-align: left;
   }
 
   audio {
