--- a/index.css
+++ b/index.css
@@ -274,6 +274,7 @@ section * {
   color: white;
   border: none;
   border-radius: 1rem;
+  padding: 1vh;
 }
 
 #submQuizz:hover {
@@ -451,7 +452,7 @@ footer {
 */
 
   section {
-    padding: 5vh 5vw;
+    padding: 5vh 5vw 0 5vw;
     width: 75vw;
   }
 
@@ -537,6 +538,10 @@ footer {
     box-shadow: 0 0 20px black;
     border-radius: 1rem;
     padding: 2vh;
+    height: 65vh;
+    margin-bottom: 5vh;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   #redemption .raw {
@@ -968,6 +973,10 @@ footer {
 
   #bands .bimgd {
     display: block;
+  }
+
+  #redemption form {
+    height: 70vh;
   }
 
   /*
