--- a/index.css
+++ b/index.css
@@ -137,7 +137,6 @@ nav {
   font-size: 2rem;
   box-shadow: 0 0 20px black;
   z-index: 1;
-  transition: 0.5s;
 }
 
 ul {
@@ -242,7 +241,7 @@ section * {
   margin-top: 0;
 }
 
-#redemption label {
+#redemption .question {
   margin: 5vh 0;
   background-color: rgb(32, 31, 28);
   border-radius: 0.5rem;
@@ -256,7 +255,7 @@ section * {
   align-items: center;
 }
 
-#redemption p {
+#redemption label {
   padding: 0 2vw;
 }
 
