--- a/index.css
+++ b/index.css
@@ -547,7 +547,6 @@ footer {
     width: 40vw;
     border: solid 1vh rgb(32, 31, 28, 0.7);
     box-shadow: 0 0 20px black;
-    border-radius: 50;
   }
 
   #history .bat {
@@ -596,10 +595,7 @@ footer {
     box-shadow: 0 0 20px black;
     border-radius: 1rem;
     padding: 2vh;
-    height: 65vh;
     margin-bottom: 5vh;
-    overflow-y: auto;
-    overflow-x: hidden;
   }
 
   #redemption .raw {
@@ -725,8 +721,7 @@ footer {
     display: grid;
     grid-template:
       "n h a"
-      "n s a"
-      "f f f";
+      "n s a";
   }
   .navButton {
     display: none;
@@ -803,6 +798,7 @@ footer {
     width: 50vw;
     padding-top: 0;
     font-size: 40px;
+    z-index: 1;
   }
 
   #about .text {
@@ -1072,10 +1068,6 @@ footer {
     display: block;
   }
 
-  #redemption form {
-    height: 70vh;
-  }
-
   #redemption .line {
     width: 20vw;
   }
@@ -1130,7 +1122,7 @@ footer {
 */
 
   footer {
-    position: sticky;
+    position: fixed;
     bottom: 0;
     display: flex;
     flex-direction: row;
