--- a/index.css
+++ b/index.css
@@ -289,7 +289,7 @@ section * {
   box-shadow: 0 0 20px black;
   border-radius: 1rem;
   height: 60vh;
-  width: 60vw;
+  width: 55vw;
   position: fixed;
   top: 10vh;
   left: 10vh;
@@ -307,6 +307,10 @@ section * {
   padding: 2vh;
   width: 20vw;
   margin: auto;
+}
+
+.answerb:hover {
+  color: #c4b483;
 }
 
 /*
